--- a/src/Project4/Project4.css
+++ b/src/Project4/Project4.css
@@ -2,36 +2,35 @@
 #abstract4 {
   background-color: #ffffff;
   letter-spacing: 0.1em;
-  display: flex;
   justify-content: center;
   height: 100vh;
 }
 
 #Info1 {
-  width: 90%;
+  width: 100%;
 }
 
 .Project4-header {
   text-align: center;
-  width: 50%;
-  margin-right: 60px;
-  margin-left: 160px;
-  display: flex;
+  width: 100%;
+  margin-bottom: 40px;
   align-items: center;
 }
 
 .Project4-header2 {
-  margin-top: 80px;
-  width: 50%;
+  width: 80%;
+  display: flex;
+  margin: auto;
 }
 
 .Project4-sidebar {
   padding: 20px;
+  width: 40%;
 }
 
 .Project4-abstract {
-  padding: 40px;
-  width: 450px;
+  padding: 20px;
+  width: 60%;
 }
 
 .Project4-sidebar h1 {
