--- a/src/Project4/Project4.css
+++ b/src/Project4/Project4.css
@@ -200,3 +200,97 @@
   font-weight: normal;
   line-height: 1.7em;
 }
+
+/* DisplaySection.css */
+#display4 {
+  letter-spacing: 0.1em;
+  background-color: #ffffff;
+}
+
+.display4-container {
+  color: #333;
+  padding: 20px;
+  width: 80%;
+  margin: auto;
+}
+
+.display4-h2 {
+  color: #3C8CDD;
+  font-size: medium;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.display4-header {
+  color: #454545;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 36px;
+}
+
+.display4-paragraph {
+  color: #707070;
+  font-size: 14px;
+  line-height: 1.7em;
+  margin-top: 10px;
+}
+
+/* FutureVisionSection.css */
+#futurevision4 {
+  letter-spacing: 0.1em;
+  background-color: #ffffff;
+}
+
+.futurevision4-container {
+  color: #333;
+  padding: 20px;
+  width: 80%;
+  margin: auto;
+}
+
+.futurevision4-h2 {
+  color: #3C8CDD;
+  font-size: medium;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.futurevision4-header {
+  color: #454545;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 36px;
+}
+
+.futurevision4-paragraph {
+  color: #707070;
+  font-size: 14px;
+  line-height: 1.7em;
+  margin-top: 10px;
+}
+
+/* FooterSection.css */
+#footer4 {
+  letter-spacing: 0.1em;
+  background: linear-gradient(#ffffff, #d1e1fa);
+  padding: 60px 0px 60px 0px;
+}
+
+.footer4-container {
+  color: #3C8CDD;
+  padding: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
+  display: flex;
+}
+
+.footer4-header {
+  width: 100%;
+  color: #263340;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 32px;
+  margin-top: 28px;
+  display: flex;
+  justify-content: space-between;
+}
