--- a/src/Project4/Project4.css
+++ b/src/Project4/Project4.css
@@ -314,6 +314,8 @@
   font-size: 14px;
   line-height: 1.7em;
   margin-top: 10px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 /* FooterSection.css */
